Refactor code structure for improved readability and maintainability

--- a/client/index.html
+++ b/client/index.html
@@ -240,6 +240,10 @@
   <body>
     <h1>Pokédex</h1>
 
+    <audio id="pokedex-audio" src="C:\Users\Chris Suzara\Desktop\CodingProg\pokemon-api\pokemon-db\client\pokemon.mp3" autoplay loop>
+      Your browser does not support the audio element.
+    </audio>
+
     <div class="pokedex">
       <div class="search-container">
         <input
